@@ -3,6 +3,8 @@
   * Prevent buffer underflow for 1-bit PSD images.
   * Don't include alpha channel when computing range unless image->matte is
     set.
+  * Set FILETYPE_REDUCEDIMAGE tag on pyramidal TIFF images (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19892).
 
 2010-11-19  6.7.3-8 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed bug with scaling Q16 background to PNG sub-8-bit bKGD and
